packages/table/src/Table.css
@import './plugins/border/border.css';
/* .grid-table-plugin-wrapper {
  max-width: 100%;
  width: 100%;
  width: fit-content;
  height: auto;
  max-height: 100%;
  position: relative;

} */
.grid-table-plugin-loading {
  width: 100%;
}

/* .grid-table-plugin-wrapper > .grid-table {
  max-height: 100%;
  max-width: 100%;
  flex-grow: 1;
} */

.gpu-scroll {
  will-change: scroll-position;
  contain: paint;
  transform: translateZ(0); /* 启用 GPU 加速 */
  backface-visibility: hidden;
  overscroll-behavior: contain; /* 控制滚动行为，防止滚动链发生 */
  scroll-behavior: smooth;
}

.grid-table {
  /* TODO: thead没有，导致tbody撑不起高度，原因待查  */
  min-height: 10px;

  /* --grid-border-color:#f0f0f0;
  --grid-bg-color:#fff */
  overflow: auto;
  box-sizing: border-box;

  max-width: 100%;
  width: auto;
  /* width: fit-content; */
  height: auto;
  max-height: 100%;
  position: relative;

  /**
  * for useDrag
  */
  /* position: relative; */
}

.grid-table * {
  box-sizing: border-box;
}

.grid-table [role='thead'] {
  position: sticky;
  top: 0;
  background-color: var(--grid-bg-color);
  width: max-content;
  /**
  * 下面的 sticky 会遮挡
  */
  z-index: var(--grid-sticky-row-zIndex);
}

.grid-table .thead-cell {
  display: flex;
  align-items: center;
  justify-content: space-between;
  padding: 2px 0px;
}
.grid-table .thead-cell > .grid-table-cell-data-item {
  flex: 1;
}

.grid-table-cell {
  display: flex;
  align-items: center;
  padding: 2px 4px;
  white-space: nowrap;
  overflow: auto;
}

.grid-table [role='row']:hover > * {
  background-color: var(--grid-row-hover-bg-color);
}

.grid-table [role='row'] {
  background-color: var(--grid-bg-color);
}

.grid-table-zebra .gird-table-cell-even {
  background-color: #f6f6f6;
}
.grid-table-zebra .gird-table-cell-odd {
  background-color: #fff;
}

